@@ -26,6 +26,7 @@ Changelog for 1.3.6 [WIP]
 -Fixed the lock/star sign behavior at locked two-way warps: now they work correctly at the opposite side (@Wohlstand)
 -Added an ability to set a different path for the user directory by command line argument (@Wohlstand)
 -Blocked an ability to start the game with no episodes or battle levels available in the list and prevented several issues with this (@Wohlstand)
+-Disabled 2x texture scale down optimization by default
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
